<resources>
    <string name="app_name">Customer List</string>
    <string name="logo_customer_list">Logo Customer List</string>
    <string name="button_new_client">Button New Client</string>
    <string name="error_message">Ops.. something went wrong \n try again</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="button_add_client">Add</string>
    <string name="create_a_customer">Create a Customer</string>
    <string name="loading">Loading</string>
    <string name="icon_person">icon_person</string>
    <string name="icon_email">icon_email</string>
    <string name="icon_phone">icon_phone</string>
    <string name="menu_back">menu_back</string>
    <string name="icon_menu_profile">icon_menu_profile</string>
    <string name="customer">Customer</string>
    <string name="update">update</string>
    <string name="button_delete">button_delete</string>
    <string name="message_success">Success!</string>
    <string name="message_error_add">"Error to add new customer, try again"</string>
    <string name="button_send_email">button_send_email</string>
    <string name="button_call">Button_call</string>

</resources>